@@ -200,6 +200,15 @@ Length StringImpl::toLength()
     return parseLength(m_data, m_length);
 }
 
+static int countCharacter(StringImpl* string, UChar character)
+{
+    int count = 0;
+    int length = string->length();
+    for (int i = 0; i < length; ++i)
+            count += (*string)[i] == character;
+    return count;
+}
+
 Length* StringImpl::toCoordsArray(int& len)
 {
     Vector<UChar> spacified(m_length);
@@ -214,7 +223,7 @@ Length* StringImpl::toCoordsArray(int& len)
 
     str = str->simplifyWhiteSpace();
 
-    len = (str->find(' ') >= 0) + 1;
+    len = countCharacter(str.get(), ' ') + 1;
     Length* r = new Length[len];
 
     int i = 0;
@@ -227,6 +236,8 @@ Length* StringImpl::toCoordsArray(int& len)
     }
     r[i] = parseLength(str->characters() + pos, str->length() - pos);
 
+    ASSERT(i == len - 1);
+
     return r;
 }
 
@@ -238,7 +249,7 @@ Length* StringImpl::toLengthArray(int& len)
         return 0;
     }
 
-    len = (str->find(',') >= 0) + 1;
+    len = countCharacter(str.get(), ',') + 1;
     Length* r = new Length[len];
 
     int i = 0;
@@ -249,6 +260,8 @@ Length* StringImpl::toLengthArray(int& len)
         r[i++] = parseLength(str->characters() + pos, pos2 - pos);
         pos = pos2+1;
     }
+
+    ASSERT(i == len - 1);
 
     /* IE Quirk: If the last comma is the last char skip it and reduce len by one */
     if (str->length()-pos > 0)
@@ -809,6 +822,8 @@ PassRefPtr<StringImpl> StringImpl::replace(UChar pattern, StringImpl* replacemen
     srcSegmentLength = m_length - srcSegmentStart;
     memcpy(data.data() + dstOffset, m_data + srcSegmentStart, srcSegmentLength * sizeof(UChar));
 
+    ASSERT(dstOffset + srcSegmentLength == static_cast<int>(data.size()));
+
     return adopt(data);
 }
 
@@ -854,6 +869,8 @@ PassRefPtr<StringImpl> StringImpl::replace(StringImpl* pattern, StringImpl* repl
 
     srcSegmentLength = m_length - srcSegmentStart;
     memcpy(data.data() + dstOffset, m_data + srcSegmentStart, srcSegmentLength * sizeof(UChar));
+
+    ASSERT(dstOffset + srcSegmentLength == static_cast<int>(data.size()));
 
     return adopt(data);
 }
